fix: popover height & arrow visibility

--- a/angular/src/assets/css/main.sass
+++ b/angular/src/assets/css/main.sass
@@ -1008,4 +1008,6 @@ rk-table-container .rk-table-container-header .bottom-content .badges-container 
   font-size: 12px
   color: black
   border-radius: 10px
+  max-height: 200px
+  overflow-y: auto
 
